# paddle_cpp_onnx

./: .gitignore  CMakeLists.txt  config.yaml  test.cpp
include/: bbox.h  config.h  ocr.h  postprocess.h  preprocess.h  textclassifier.h  textdetector.h  textrecognizer.h  utils.h
src/: bbox.cpp  config.cpp  main.cpp  ocr.cpp  postprocess.cpp  preprocess.cpp  textclassifier.cpp  textdetector.cpp  textrecognizer.cpp  utils.cpp
src/clipper2/: CMakeLists.txt
